Lesson 10 - added DTO to Product logic